<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:layout_columnWeight="1"
        android:onClick="btnOne"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:layout_columnWeight="1"
        android:onClick="btnTwo"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_columnWeight="1"
        android:onClick="btnThree"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:onClick="btnFour"/>
    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:onClick="btnFive"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:onClick="btnSix"/>
    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="btnSeven"/>
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:onClick="btnEight"/>
    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:onClick="btnNine"/>
    <Button
        android:id="@+id/btn_del_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="4"
        android:onClick="btnDellAll" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:onClick="btnZero"/>
    <Button
        android:id="@+id/btn_del_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:onClick="btnDellOne"/>
</GridLayout>